<resources>
    <string name="app_name">MSPR_1_APP_MOBIL</string>
    <string name="Agent1">3soufien</string>
    <string name="Agent2">Aaishi</string>
    <string name="Agent3">Bfa</string>
    <string name="Agent4">Cchankla</string>
    <string name="Agent5">Mhollande</string>
    <string name="Agent6">Mjakson</string>
    <string name="Agent7">Nel_kelb</string>
    <string name="Agent8">Pnoel</string>
    <string name="Agent9">Vtom</string>
    <string name="Agent10">Ldark</string>
    <string name="Agent11">Lbob</string>
    <string name="agent_picture">Image agent</string>
    <string name="agent_lastname">Nom :</string>
    <string name="agent_firstname">Prénom :</string>
    <string name="agent_mission">Mission :</string>
    <string name="go_back_arrow">Flèche de retour arrière</string>
    <string name="sign_in">Identification</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="equipment">Équipement :</string>
    <string name="login">Se connecter</string>
</resources>