<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Button
                android:id="@+id/buttonAgent1"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent1" />

            <Button
                android:id="@+id/buttonAgent2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent2" />
            <Button
                android:id="@+id/buttonAgent3"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent3" />
            <Button
                android:id="@+id/buttonAgent4"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent4" />
            <Button
                android:id="@+id/buttonAgent5"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent5" />

            <Button
                android:id="@+id/buttonAgent6"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent6" />

            <Button
                android:id="@+id/buttonAgent7"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent7" />
            <Button
                android:id="@+id/buttonAgent8"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent8" />
            <Button
                android:id="@+id/buttonAgent9"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent9" />
            <Button
                android:id="@+id/buttonAgent10"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent10" />
            <Button
                android:id="@+id/buttonAgent11"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Agent11" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>