<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_btn_bg"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/btn_retour_bleu"
        android:contentDescription="@string/go_back_arrow"/>

    <TextView
        android:id="@+id/json_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_margin="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="password"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/vert"
        android:text="@string/login" />

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/others"-->
    <!--        android:layout_above="@id/socialicons"-->
    <!--        android:text="or sign in with"-->
    <!--        android:layout_centerHorizontal="true"/>-->


    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/socialicons"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:gravity="center">-->


    <!--        <ImageView-->
    <!--            android:layout_width="48dp"-->
    <!--            android:layout_height="48dp"-->
    <!--            android:layout_margin="20dp"-->
    <!--            android:src="@drawable/google"/>-->
    <!--        <ImageView-->
    <!--            android:layout_width="48dp"-->
    <!--            android:layout_height="48dp"-->
    <!--            android:layout_margin="20dp"-->
    <!--            android:src="@drawable/fb"/>-->
    <!--        <ImageView-->
    <!--            android:layout_width="48dp"-->
    <!--            android:layout_height="48dp"-->
    <!--            android:layout_margin="20dp"-->
    <!--            android:src="@drawable/twitter"/>-->

    <!--    </LinearLayout>-->


</RelativeLayout>