<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgentActivity">
    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/contentLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageViewAgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="25dp"
            android:contentDescription="@string/agent_picture"/>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="start">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:padding="10sp"
                    android:textColor="@color/bleu"
                    android:gravity="end"
                    android:text="@string/agent_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:padding="10sp"
                    android:id="@+id/textViewAgentNom"
                    android:textColor="@color/bleu"
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:padding="10sp"
                    android:textColor="@color/bleu"
                    android:gravity="start"
                    android:text="@string/agent_firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:padding="10sp"
                    android:id="@+id/textViewAgentPrenom"
                    android:textColor="@color/bleu"
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:padding="10sp"
                    android:textColor="@color/bleu"
                    android:gravity="start"
                    android:text="@string/agent_mission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:padding="10sp"
                    android:id="@+id/textViewAgentMission"
                    android:textColor="@color/bleu"
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </LinearLayout>
            <TextView
                android:padding="10sp"
                android:textColor="@color/bleu"
                android:gravity="end"
                android:text="@string/equipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <ListView
                android:id="@+id/listMateriel"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            </ListView>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>